[gd_scene load_steps=11 format=3 uid="uid://dex6u2j1i8amw"]

[ext_resource type="Script" path="res://Code/scripts/Minecart.gd" id="1_7own3"]
[ext_resource type="ArrayMesh" uid="uid://cobwmma1blglw" path="res://Assets/western2/gold level 1.obj" id="2_5enmx"]
[ext_resource type="ArrayMesh" uid="uid://fsgewjvqo6sd" path="res://Assets/western2/trolley 2.obj" id="2_x3mhb"]
[ext_resource type="ArrayMesh" uid="uid://d0o6padc1sls3" path="res://Assets/western2/gold level 2.obj" id="3_tm8cb"]
[ext_resource type="ArrayMesh" uid="uid://bwgommudium2w" path="res://Assets/western2/gold level 3.obj" id="4_oes0g"]
[ext_resource type="AudioStream" uid="uid://celtshfqnrhmk" path="res://Assets/Sounds/minecart.mp3" id="6_k456m"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_by6o8"]
friction = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_p2pbx"]
size = Vector3(4.82544, 0.420151, 4.12988)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2ktwb"]
height = 3.0
radius = 2.0

[sub_resource type="BoxShape3D" id="BoxShape3D_hndlp"]
size = Vector3(1, 3, 4)

[node name="Minecart" type="RigidBody3D" groups=["Minecart"]]
collision_layer = 13
collision_mask = 13
axis_lock_angular_x = true
axis_lock_angular_z = true
physics_material_override = SubResource("PhysicsMaterial_by6o8")
gravity_scale = 10.0
continuous_cd = true
max_contacts_reported = 5
contact_monitor = true
angular_damp_mode = 1
angular_damp = 0.9
script = ExtResource("1_7own3")
max_speed = 12
gold_fill_meshes = Array[ArrayMesh]([ExtResource("2_5enmx"), ExtResource("3_tm8cb"), ExtResource("4_oes0g")])

[node name="Minecart" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = ExtResource("2_x3mhb")

[node name="Area3D2" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0369873, 3.57426, 0.0131836)
shape = SubResource("BoxShape3D_p2pbx")

[node name="FillMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.5, 0)
shape = SubResource("CylinderShape3D_2ktwb")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1.5, 0)
shape = SubResource("CylinderShape3D_2ktwb")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_hndlp")

[node name="RollingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_k456m")
volume_db = -80.0
bus = &"Sound"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Area3D2" to="." method="_on_area_3d_2_body_entered"]
